unpackaged/main/default/objects/Concur_Import__c/Concur_Import__c.object-meta.xml
<CustomObject>
    <label>Concur Import</label>
    <nameField>
        <label>Concur Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concur Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>