unpackaged/main/default/objects/Concur_Import__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>