unpackaged/main/default/objects/Concur_Import__c/fields/GL_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Name__c</fullName>
    <label>GL Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>