unpackaged/main/default/objects/Concur_Import__c/fields/Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Id__c</fullName>
    <label>Line Item Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>