unpackaged/main/default/objects/Concur_Import__c/fields/List_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>List_Item_Id__c</fullName>
    <label>List Item Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>