unpackaged/main/default/objects/Concur_Import__c/fields/Payment_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type_Name__c</fullName>
    <label>Payment Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>