unpackaged/main/default/objects/Concur_Import__c/fields/Retry_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Retry_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Transfer?</label>
    <type>Checkbox</type>
</CustomField>